# 39claw

./: .env.example  .envrc.example  .gitignore  .goreleaser.yaml  AGENTS.md  ARCHITECTURE.md  Makefile  README.md  go.mod  go.sum
docs/: index.md
docs/references/py-pimono/: .gitignore  ARCHITECTURE.kr.md  ARCHITECTURE.md  README.kr.md  README.md  pyproject.toml
docs/references/py-pimono/pypimono/: __main__.py  cli.py  container.py  settings.py
docs/references/py-pimono/pypimono/engine/: container.py
docs/references/py-pimono/pypimono/engine/application/: agent.py
docs/references/py-pimono/pypimono/engine/domain/: agent_event.py  agent_loop.py  messages.py  tool_execution.py
docs/references/py-pimono/pypimono/integration/engine_session/: container.py  event_mapper.py  message_mapper.py  runtime_adapter.py
docs/references/py-pimono/pypimono/integration/session_ui/: container.py  event_mapper.py  message_mapper.py  session_gateway_adapter.py  startup_mapper.py
docs/references/py-pimono/pypimono/prompts/: __init__.py  default_system_prompt.md
docs/references/py-pimono/pypimono/session/: container.py
docs/references/py-pimono/pypimono/session/application/: agent_session.py  session_manager.py  system_prompt_builder.py
docs/references/py-pimono/pypimono/session/domain/: entry.py  history.py
docs/references/py-pimono/pypimono/ui/: container.py
docs/references/py-pimono/tests/: test_codex_tooling.py  test_codex_usage_metrics.py  test_engine_tools.py  test_notion_auth_cli.py  test_notion_tool_presentation.py  test_remote_mcp_store.py
example/: README.md  (+12 more)
(+247 files in other folders)
